# Jerry

./: .env.example  .env.staging  .gitignore  DEPLOYMENT_STATUS.md  Dockerfile  IMPROVEMENT_PLAN.md  LICENSE  PRODUCTION_TEST_REPORT.md  PROJECT_REVIEW_SUMMARY.md  README.md  SECURITY.md  context_cache.md  deploy-jerry.sh  deploy-k8s.sh  deploy-podman.sh  deploy-production.sh  fix_code_quality.py  improve_security.py  jerry-minimal.yaml  main.ts  manage-infrastructure.sh  package.json  pyproject.toml  regCommands.js  ruff.toml  simple_dashboard.py  validate-production.sh
.devcontainer/: devcontainer.json  devtools.sh
.github/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
Resources/: amber_electric_integration.md  emhass_integration.md  feed_in_tariffs.md  guide_to_household_solar.md  home_assistant_integration.md  jinja2_templates.md  open_source_ems.md  vehicle_to_grid_v2g.md
configs/: Dockerfile.agent  Dockerfile.bot  Dockerfile.dashboard  Dockerfile.model  Dockerfile.model-cpu  Dockerfile.model.multi-gpu  Dockerfile.rag  Dockerfile.tunnel  Dockerfile.webchat  production.env  tunnel-config.yml
data_ingestion/: pdf_processor.py  vector_populate.py
docs/: api.md  deployment.md  development.md  performance.md
k8s/: 00-namespace-config.yaml  01-storage.yaml  02-vector-db.yaml  03-model-service.yaml  04-rag-service.yaml  05-agent-service.yaml  06-web-chat.yaml
specs/001-jerry-self-hosted/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/bot/: bot.py  commands.py  (+1 more)
(+37 files in other folders)
